--- a/contact.html
+++ b/contact.html
@@ -76,6 +76,8 @@
 
 	<small class="is-comment header-note"><b><span class="is-emoji">&#x26a0;</span>Note:</b> This website uses mouse-over (hover) effects and is best viewed on a wider screen (&ge; 1024px).</small>
 
+	<small class="is-comment header-note-connect"><b><span class="is-emoji">&#x1f4ac;</span>Connect:</b> Please <a rel="internal" href="/contact.html" class="path ahref-text is-reference">reach out to me via email</a>. You can stay updated on my latest research and work by following me on <a rel="external author" target="_blank" href="https://scholar.google.com/citations?user=vFkliXsAAAAJ" class="ahref-text">Google Scholar</a>, <a rel="internal" href="/contact.html#External-Links" class="path anchor ahref-text is-reference">social media</a> (including <a rel="external author" target="_blank" href="https://x.com/fvandervlist" class="ahref-text">&#x1d54f; (Twitter)</a>, <a rel="external author" target="_blank" href="https://bsky.app/profile/fvandervlist.bsky.social" class="ahref-text">Bluesky</a>, <a rel="external author" target="_blank" href="https://www.linkedin.com/in/fvandervlist/" class="ahref-text">LinkedIn</a>), or by subscribing to <a rel="alternate" type="application/rss+xml" href="/Resources/feed.xml" class="path ahref-text">this website&rsquo;s RSS feed</a>.</small>
+
 	<header>
 		<p class="header-path">
 			<a rel="author" href="/" class="path path-root">fernandovandervlist.nl/</a>
