--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 	<title>Index of / &ndash; fernandovandervlist.nl</title>
 
 	<meta name="title" content="Index of / &ndash; fernandovandervlist.nl" />
-	<meta name="description" content="Fernando van der Vlist, PhD, is a researcher, writer, graphic designer, and educator specialising in digital media and technology. He is Assistant Professor and programme coordinator for the Master&rsquo;s Cultural Data &amp; AI in the Department of Media Studies at the University of Amsterdam, Netherlands. His research focuses on the critical study of digital platforms and apps, their ecosystems, data, and artificial intelligence (AI) in culture and society." />
+	<meta name="description" content="Fernando van der Vlist, PhD, is a scholar, graphic designer, and educator specialising in digital media and technology. He is Assistant Professor and programme coordinator for the Master&rsquo;s Cultural Data &amp; AI in the Department of Media Studies at the University of Amsterdam, Netherlands. His research focuses on the critical study of digital platforms and apps, their ecosystems, data, and artificial intelligence (AI) in culture and society." />
 	<meta name="keywords" content="
 		University of Amsterdam (UvA), Media Studies, Humanities, Amsterdam School for Cultural Analysis (ASCA), Amsterdam Institute for Humanities Research (AIHR), 
 		App Studies Initiative (ASI), Digital Methods Initiative (DMI), Public Data Lab, 
@@ -40,14 +40,14 @@
 	<meta property="og:type" content="website" />
 	<meta property="og:title" content="Index of / &ndash; fernandovandervlist.nl" />
 	<meta property="og:site_name" content="fernandovandervlist.nl" />
-	<meta property="og:description" content="Fernando van der Vlist, PhD, is a researcher, writer, graphic designer, and educator specialising in digital media and technology. He is Assistant Professor and programme coordinator for the Master&rsquo;s Cultural Data &amp; AI in the Department of Media Studies at the University of Amsterdam, Netherlands. His research focuses on the critical study of digital platforms and apps, their ecosystems, data, and artificial intelligence (AI) in culture and society." />
+	<meta property="og:description" content="Fernando van der Vlist, PhD, is a scholar, graphic designer, and educator specialising in digital media and technology. He is Assistant Professor and programme coordinator for the Master&rsquo;s Cultural Data &amp; AI in the Department of Media Studies at the University of Amsterdam, Netherlands. His research focuses on the critical study of digital platforms and apps, their ecosystems, data, and artificial intelligence (AI) in culture and society." />
 
 	<!-- Twitter tags -->
 	<meta name="Twitter:card" content="summary" />
 	<meta name="Twitter:title" content="Index of / &ndash; fernandovandervlist.nl" />
 	<meta name="Twitter:url" content="https://www.fernandovandervlist.nl/index.html" />
 	<meta name="Twitter:domain" content="fernandovandervlist.nl" />
-	<meta name="Twitter:description" content="Fernando van der Vlist, PhD, iis a researcher, writer, graphic designer, and educator specialising in digital media and technology. He is Assistant Professor and programme coordinator for the Master&rsquo;s Cultural Data &amp; AI in the Department of Media Studies at the University of Amsterdam, Netherlands. His research focuses on the critical study of digital platforms and apps, their ecosystems, data, and artificial intelligence (AI) in culture and society." />
+	<meta name="Twitter:description" content="Fernando van der Vlist, PhD, iis a scholar, graphic designer, and educator specialising in digital media and technology. He is Assistant Professor and programme coordinator for the Master&rsquo;s Cultural Data &amp; AI in the Department of Media Studies at the University of Amsterdam, Netherlands. His research focuses on the critical study of digital platforms and apps, their ecosystems, data, and artificial intelligence (AI) in culture and society." />
 
 	<!-- HTML base tag -->
 	<base href="https://www.fernandovandervlist.nl/" />
@@ -105,7 +105,7 @@
 		<section class="summary">
 			<h4 class="is-author">Fernando <b>van der Vlist</b></h4>
 			<blockquote class="is-highlight"><span class="is-emoji blockquote-quo">&rdquo;</span><a rel="internal" href="/about.html#Profile" class="path anchor ahref-text">
-				is a researcher, writer, graphic designer, and educator specialising in digital media and technology. He is Assistant Professor and programme coordinator for the Master&rsquo;s Cultural Data &amp; AI in the Department of Media Studies at the University of Amsterdam (UvA), Netherlands. His research focuses on the critical study of digital platforms and apps, their ecosystems, data, and artificial intelligence (AI) in culture and society.
+				is a scholar, graphic designer, and educator specialising in digital media and technology. He is Assistant Professor and programme coordinator for the Master&rsquo;s Cultural Data &amp; AI in the Department of Media Studies at the University of Amsterdam (UvA), Netherlands. His research focuses on the critical study of digital platforms and apps, their ecosystems, data, and artificial intelligence (AI) in culture and society.
 			</a></blockquote>
 			<section class="summary-expands-hover">
 				<small class="is-comment note-expands"><b><span class="is-emoji">&#x2139;</span>Note:</b> Please hover to display additional information.</small>
